Adding docs in reStructuredText